# Fantasy-Baseball-Projections

./: 2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2021.csv  2022.csv  Final Presentation.pptx  H_data.csv  P2015.csv  P2016.csv  P2017.csv  P2018.csv  P2019.csv  P2021.csv  P2022.csv  P_data.csv  README.md  Standup Meeting 1 Presentation.pptx  hitters_all.csv  modeling.py  new_script.py  pitchers_all.csv  preprocessing.py  pyproject.toml  test_script.py
2008 to 2022 Data/: H2008.csv  H2009.csv  H2010.csv  H2011.csv  H2012.csv  H2013.csv  H2014.csv  H2015.csv  H2016.csv  H2017.csv  H2018.csv  H2019.csv  H2020.csv  H2021.csv  H2022.csv  P2008.csv  P2009.csv  P2010.csv  P2011.csv  P2012.csv  P2013.csv  P2014.csv  P2015.csv  P2016.csv  P2017.csv  P2018.csv  P2019.csv  P2020.csv  P2021.csv  P2022.csv
tmp/: checkpoint  checkpoint.data-00000-of-00001  checkpoint.index  checkpointH.data-00000-of-00001  checkpointH.index  checkpointP.data-00000-of-00001  checkpointP.index
