[tool.poetry]
name = "fantasy-baseball-projections"
version = "0.1.0"
description = ""
authors = ["suhasburavalla <106994165+sburavalla@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pandas = "^1.5.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
